# snail

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  calib.txt  snail_motor.h
snail_motor/: README  snail_motor.cpp  snail_motor_test.cpp
src/: CMakeLists.txt  charuco_snail.cpp  emp_client.cpp  emp_client.h  jlog.h  pi@192.168.1.2~  power_test.cpp  printutil.h  privacyconf.h  snail.cpp  visp_snail.cpp  visp_snail_old.cpp
src/cleartext-ref/: .svd.hpp.swp  gaussnewtonlocalization.hpp  invert.hpp  lmlocalization.hpp  matmult.hpp  projectpoints.hpp  rodrigues.hpp  svd.hpp  trigfuncs.hpp  twonormsq.hpp
